--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,18 +6,18 @@ license = "MIT"
 license-file = "LICENSE"
 readme = "README.md"
 description = "A mdbook preprocessor enable multiple programming languages playground."
-repository = "https://github.com/GaoJeffrey/mdbook-lang.git"
+repository = "https://github.com/GaoJeffrey/mdbook-lang"
 keywords = ["book", "gitbppk", "rustbook", "mdbook", "mkdown", "preprocessor", "playground", "multiple programming languages", "compiler server"]
-authors = ["GauxuJeffrey@zzu <gaoxu.jeffrey@gmail.com>"]
+authors = ["GauJeffrey <gaoxu.jeffrey@gmail.com>"]
 exclude = ["/example/*", "/nginx/*", "/firejail/*", "/tests/*"]
+autobenches = false
+autobins = false
+autoexamples = false
+autotests = false
 
 [[bin]]
 
 name = "mdbook-lang"
-version = "0.1.0"
-description = "A mdbook preprocessor enable multiple programming languages playground."
-authors = ["GauxuJeffrey@zzu <gaoxu.jeffrey@gmail.com>"]
-license = "MIT"
 path = "src/main.rs"
 
 [dependencies]
