--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license-file = "LICENSE"
 readme = "README.md"
 description = "A mdbook preprocessor enable multiple programming languages playground."
 repository = "https://github.com/GaoJeffrey/mdbook-lang"
-keywords = ["book", "gitbppk", "rustbook", "mdbook", "mkdown", "preprocessor", "playground", "multiple programming languages", "compiler server"]
+keywords = ["mdbook", "preprocessor", "multi-language", "playground", "server"]
 authors = ["GauJeffrey <gaoxu.jeffrey@gmail.com>"]
 exclude = ["/example/*", "/nginx/*", "/firejail/*", "/tests/*"]
 autobenches = false
