update travis conf
update travis conf

--- a/doc/book.toml
+++ b/doc/book.toml
@@ -3,3 +3,32 @@ authors = ["Gaoxu Jeffrey"]
 language = "en"
 src = "src"
 title = "mdbook-lang"
+
+
+[preprocessor]
+
+[preprocessor.lang]
+command = "mdbook-lang"
+server = "http://183.205.132.14:3333/playground/api/v1/build-code"
+cpp-enable = true
+java-enable = true
+go-enable = true
+python-enable = true
+javascript-enable = true
+typescript-enable = true
+scheme-enable = true
+editable = true
+disable-devtool-auto = false
+disable-menu = false
+clear-log = false
+disable-select = false
+disable-copy = false
+disable-cut = false
+disable-paste = false
+ace-strict = false
+
+[output]
+
+[output.html]
+additional-js = ["jquery.js", "disable-devtool.js", "lang.js"]
+additional-css = ["lang.css"]
