--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,15 @@ rust:
 
 before_script:
   - (test -x $HOME/.cargo/bin/cargo-install-update || cargo install cargo-update)
-  - (test -x $HOME/.cargo/bin/mdbook || cargo install --vers "^0.4.51" mdbook)
+  - (test -x $HOME/.cargo/bin/mdbook || cargo install mdbook)
   - (test -x $HOME/.cargo/bin/mdbook-lang || cargo install mdbook-lang)
   - cargo install-update -a
 
 script:
   - cd doc
-  - mdbook build && mdbook test # In case of custom book path: mdbook build path/to/mybook && mdbook test path/to/mybook
   - mdbook-lang install
+  - mdbook build && mdbook test # In case of custom book path: mdbook build path/to/mybook && mdbook test path/to/mybook
+  
 deploy:
   provider: pages
   strategy: git
