--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -29,7 +29,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      MDBOOK_VERSION: 0.4.36
+      MDBOOK_VERSION: 0.4.51
     steps:
       - uses: actions/checkout@v4
       - name: Install mdBook
@@ -44,7 +44,7 @@ jobs:
       - name: Build with mdBook
         run: |
           cd doc
-          mdbook install
+          mdbook-lang install
           mdbook build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
