--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,26 +43,25 @@ jobs:
       #     target: ${{ matrix.target }}
 
       - name: Build release
-        run: cd backend && cargo build --release
+        run: cargo build --release
 
       - name: Artifact (Unix)
         if: matrix.target != 'x86_64-pc-windows-msvc'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.target }}
-          path: backend/target/release/mdbook-lang
+          path: target/release/mdbook-lang
 
       - name: Artifact (Windows)
         if: matrix.target == 'x86_64-pc-windows-msvc'
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.target }}
-          path: backend/target/release/mdbook-lang.exe
+          path: target/release/mdbook-lang.exe
 
       - name: Publish crate
         if: matrix.target == 'x86_64-unknown-linux-gnu'
         run: |
-          cd backend
           cargo login ${{ secrets.CARGO_TOKEN }}
           cargo publish
 
