--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,12 +54,12 @@ jobs:
           name: ${{ matrix.target }}
           path: target/release/mdbook-lang
 
-      - name: Artifact (Windows)
-        if: matrix.target == 'x86_64-pc-windows-msvc'
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.target }}
-          path: target/release/mdbook-lang.exe
+      # - name: Artifact (Windows)
+      #   if: matrix.target == 'x86_64-pc-windows-msvc'
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: ${{ matrix.target }}
+      #     path: target/release/mdbook-lang.exe
 
       # - name: Publish crate
       #   if: matrix.target == 'x86_64-unknown-linux-gnu'
