--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,8 +42,8 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           rustup update
-          cargo install --version ${MDBOOK_VERSION} mdbook
-          cargo install mdbook-lang
+          cargo install --version ${MDBOOK_VERSION} mdbook --force
+          cargo install mdbook-lang --force
 
       - name: Build release
         run: cargo build --release
