--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,22 +76,28 @@ jobs:
         id: get_version
         run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
 
-      - name: Install packages
-        run: sudo apt update && sudo apt install -y upx-ucl zip
+      # - name: Install packages
+      #   run: sudo apt update && sudo apt install -y upx-ucl zip
 
-      - name: Rename binaries
-        run: |
-          mv x86_64-unknown-linux-gnu mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu
-          mv x86_64-apple-darwin mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin
-          # mv x86_64-pc-windows-msvc mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc
+      # - name: Rename binaries
+      #   run: |
+      #     mv x86_64-unknown-linux-gnu mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu
+      #     mv x86_64-apple-darwin mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin
+      #     # mv x86_64-pc-windows-msvc mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc
 
-      - name: Compress binaries
+      # - name: Compress binaries
+      #   run: |
+      #     chmod u+x mdbook-lang-*/mdbook-lang*
+      #     upx --best mdbook-lang-*/mdbook-lang*
+      #     zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu{.zip,}
+      #     zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin{.zip,}
+      #     # zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc{.zip,}
+
+      - name: Rename zip names
         run: |
-          chmod u+x mdbook-lang-*/mdbook-lang*
-          upx --best mdbook-lang-*/mdbook-lang*
-          zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu{.zip,}
-          zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin{.zip,}
-          # zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc{.zip,}
+          mv x86_64-unknown-linux-gnu.zip mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu.zip
+          mv x86_64-apple-darwin.zip mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin.zip
+          # mv x86_64-pc-windows-msvc.zip mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc.zip
 
       - name: Create release
         uses: softprops/action-gh-release@v1
