--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -76,36 +76,41 @@ jobs:
 
       - name: Get the version
         id: get_version
-        run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+        # run: echo ::set-output name=VERSION::${GITHUB_REF#refs/tags/}
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
+      - name: list artifacts
+        run: |
+          echo "Artifacts:"
+          ls -lR
       # - name: Install packages
       #   run: sudo apt update && sudo apt install -y upx-ucl zip
 
       # - name: Rename binaries
       #   run: |
-      #     mv x86_64-unknown-linux-gnu mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu
-      #     mv x86_64-apple-darwin mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin
-      #     # mv x86_64-pc-windows-msvc mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc
+      #     mv x86_64-unknown-linux-gnu mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu
+      #     mv x86_64-apple-darwin mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-apple-darwin
+      #     # mv x86_64-pc-windows-msvc mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc
 
       # - name: Compress binaries
       #   run: |
       #     chmod u+x mdbook-lang-*/mdbook-lang*
       #     upx --best mdbook-lang-*/mdbook-lang*
-      #     zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu{.zip,}
-      #     zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin{.zip,}
-      #     # zip -r mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc{.zip,}
+      #     zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu{.zip,}
+      #     zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-apple-darwin{.zip,}
+      #     # zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc{.zip,}
 
       - name: Rename zip names
         run: |
-          mv x86_64-unknown-linux-gnu.zip mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu.zip
-          mv x86_64-apple-darwin.zip mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin.zip
-          # mv x86_64-pc-windows-msvc.zip mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc.zip
+          mv x86_64-unknown-linux-gnu.zip mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu.zip
+          mv x86_64-apple-darwin.zip mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-apple-darwin.zip
+          # mv x86_64-pc-windows-msvc.zip mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc.zip
 
       - name: Create release
         uses: softprops/action-gh-release@v1
         with:
-          name: v${{ steps.get_version.outputs.VERSION }}
+          name: v${{ env.RELEASE_VERSION }}
           files: |
-            mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-unknown-linux-gnu.zip
-            mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-apple-darwin.zip
-            # mdbook-lang-${{ steps.get_version.outputs.VERSION }}-x86_64-pc-windows-msvc.zip
+            mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu.zip
+            mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-apple-darwin.zip
+            # mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc.zip
