--- a/.github/workflows/release1.yml
+++ b/.github/workflows/release1.yml
@@ -4,6 +4,23 @@ on:
     tags:
       - '*'
   workflow_dispatch:
+    logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+    tags:
+      description: 'Test scenario tags'
+      required: true
+      type: boolean
+    environment:
+      description: 'Environment to run tests against'
+      type: environment
+      required: true
 
 env:
   CARGO_TERM_COLOR: always
@@ -43,7 +60,6 @@ jobs:
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           rustup update
           cargo install --version ${MDBOOK_VERSION} mdbook --force
-          cargo install mdbook-lang --force
 
       - name: Build release
         run: cargo build --release
