--- a/.github/workflows/release1.yml
+++ b/.github/workflows/release1.yml
@@ -4,23 +4,28 @@ on:
     tags:
       - '*'
   workflow_dispatch:
-    logLevel:
-      description: 'Log level'
-      required: true
-      default: 'warning'
-      type: choice
-      options:
-        - info
-        - warning
-        - error
-    tags:
-      description: 'Test scenario tags'
-      required: true
-      type: boolean
-    environment:
-      description: 'Environment to run tests against'
-      type: environment
-      required: true
+    inputs:
+      version:
+        description: 'Version'
+        required: true
+        # default: '1.0.0'
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+          - info
+          - warning
+          - error
+      tags:
+        description: 'Test scenario tags'
+        required: true
+        type: boolean
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
 
 env:
   CARGO_TERM_COLOR: always
