--- a/.github/workflows/release1.yml
+++ b/.github/workflows/release1.yml
@@ -3,30 +3,7 @@ on:
   push:
     tags:
       - '*'
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version'
-        required: true
-        # default: '1.0.0'
-      logLevel:
-        description: 'Log level'
-        required: true
-        default: 'warning'
-        type: choice
-        options:
-          - info
-          - warning
-          - error
-      tags:
-        description: 'Test scenario tags'
-        required: true
-        default: '1.0.0'
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
-
+  
 env:
   CARGO_TERM_COLOR: always
   MDBOOK_VERSION: 0.4.51
@@ -48,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Checkout specific tag
-        uses: actions/checkout@master with: refs: tags: ${{ github.event.inputs.version }}
+        uses: actions/checkout@master with: ref: '${GITHUB_REF#refs/tags/}'
 
       - name: Cahce
         uses: actions/cache@v3
