--- a/.github/workflows/release1.yml
+++ b/.github/workflows/release1.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Checkout specific tag
-        uses: actions/checkout@master with: ref: '${GITHUB_REF#refs/tags/}'
+        uses: actions/checkout@master with: ref: '0.1.0'
 
       - name: Cahce
         uses: actions/cache@v3
