--- a/.github/workflows/release1.yml
+++ b/.github/workflows/release1.yml
@@ -25,7 +25,9 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - name: Checkout specific tag
-        uses: actions/checkout@master with: ref: '0.1.0'
+        uses: actions/checkout@master 
+        with: 
+          ref: '0.1.0'
 
       - name: Cahce
         uses: actions/cache@v3
