--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,8 @@ on:
   push:
     tags:
       - '*'
-  
+   # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 env:
   CARGO_TERM_COLOR: always
   MDBOOK_VERSION: 0.4.51
@@ -17,7 +18,7 @@ jobs:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
           - os: macos-latest
-            target: x86_64-apple-darwin
+            target: aarch64-apple-darwin
           # - os: windows-latest
           #   target: x86_64-pc-windows-msvc
 
@@ -72,7 +73,9 @@ jobs:
 
       - name: Get the version
         id: get_version
-        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        run: |
+          echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+          echo env.RELEASE_VERSION
 
       - name: list artifacts
         run: |
@@ -84,15 +87,15 @@ jobs:
       - name: Rename binaries
         run: |
           mv x86_64-unknown-linux-gnu mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu
-          mv x86_64-apple-darwin mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-apple-darwin
+          mv aarch64-apple-darwin mdbook-lang-${{ env.RELEASE_VERSION }}-aarch64-apple-darwin
           # mv x86_64-pc-windows-msvc mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc
 
       - name: Compress binaries
         run: |
           chmod u+x mdbook-lang-*/mdbook-lang*
-          upx --best mdbook-lang-*/mdbook-lang*
+          upx --best --force-macos mdbook-lang-*/mdbook-lang*
           zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu{.zip,}
-          zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-apple-darwin{.zip,}
+          zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-aarch64-apple-darwin{.zip,}
           # zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc{.zip,}
 
      
@@ -103,5 +106,5 @@ jobs:
           name: v${{ env.RELEASE_VERSION }}
           files: |
             mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu.zip
-            mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-apple-darwin.zip
+            mdbook-lang-${{ env.RELEASE_VERSION }}-aarch64-apple-darwin.zip
             # mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc.zip
