--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -88,7 +88,7 @@ jobs:
         run: |
           mv x86_64-unknown-linux-gnu mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu
           mv aarch64-apple-darwin mdbook-lang-${{ env.RELEASE_VERSION }}-aarch64-apple-darwin
-          # mv x86_64-pc-windows-msvc mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc
+        # mv x86_64-pc-windows-msvc mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc
 
       - name: Compress binaries
         run: |
@@ -96,7 +96,8 @@ jobs:
           upx --best --force-macos mdbook-lang-*/mdbook-lang*
           zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu{.zip,}
           zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-aarch64-apple-darwin{.zip,}
-          # zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc{.zip,}
+
+        # zip -r mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc{.zip,}
 
      
 
@@ -108,3 +109,7 @@ jobs:
             mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-unknown-linux-gnu.zip
             mdbook-lang-${{ env.RELEASE_VERSION }}-aarch64-apple-darwin.zip
             # mdbook-lang-${{ env.RELEASE_VERSION }}-x86_64-pc-windows-msvc.zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        permissions:
+          contents: write
