--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,12 @@ name = "mdbook-lang"
 version = "0.1.0"
 edition = "2024"
 license = "MIT"
-license-file = "LICENSE"
 readme = "README.md"
-description = "A mdbook preprocessor enable multiple programming languages playground."
+description = "A mdbook preprocessor enables multiple programming languages playground."
 repository = "https://github.com/GaoJeffrey/mdbook-lang"
 keywords = ["mdbook", "preprocessor", "multi-language", "playground", "server"]
 authors = ["GauJeffrey <gaoxu.jeffrey@gmail.com>"]
-exclude = ["/example/*", "/nginx/*", "/firejail/*", "/tests/*"]
+exclude = ["/doc/*", "/example/*", "/nginx/*", "/firejail/*", "/tests/*"]
 autobenches = false
 autobins = false
 autoexamples = false
