--- a/example/book.toml
+++ b/example/book.toml
@@ -9,7 +9,7 @@ title = "mdbook-lang example"
 
 [preprocessor.lang]
 command = "mdbook-lang"
-server = "http://127.0.0.1:3333/api/v1/build-code"
+server = "https://183.205.132.14:3000/playground/api/v1/build-code"
 cpp-enable = true
 java-enable = true
 go-enable = true
