--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,12 +35,23 @@ env_logger = "0.11.8"
 once_cell = "1.17.1"
 xshell = "0.2.7"
 tempfile = "3.20.0"
-daemonize = "0.5.0" 
+
 ctrlc = "3.4.7"
-signal-hook = "0.3.18"
-signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
+
 futures = "0.3.31"
 futures-core = "0.3.31"
+chrono = "0.4.41"
+
+[target.'cfg(unix)'.dependencies]
+daemonize = "0.5.0" 
+signal-hook = "0.3.18"
+signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
+
+
+[target.'cfg(windows)'.dependencies]
+windows-service = "0.8.0"
+windows-sys = {version = "0.60.1", features =["Win32"]}
+
 [dependencies.uuid]
 version = "1.17.0"
 features = [
