--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 env:
   CARGO_TERM_COLOR: always
-  MDBOOK_VERSION: 0.4.51
+  # MDBOOK_VERSION: 0.4.51
   
 jobs:
   build:
@@ -40,7 +40,10 @@ jobs:
         run: |
           curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
           rustup update
-          cargo install --version ${MDBOOK_VERSION} mdbook --force
+          # cargo install --version ${MDBOOK_VERSION} mdbook --force
+          cargo install mdbook --force
+
+
 
       - name: Build release
         run: cargo build --release
