--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -58,11 +58,11 @@ jobs:
           name: ${{ matrix.target }}
           path: target/release/mdbook-lang.exe
 
-      # - name: Publish crate
-      #   if: matrix.target == 'x86_64-unknown-linux-gnu'
-      #   run: |
-      #     cargo login ${{ secrets.CARGO_REGISTRY_TOKEN}}
-      #     cargo publish
+      - name: Publish crate
+        if: matrix.target == 'x86_64-unknown-linux-gnu'
+        run: |
+          cargo login ${{ secrets.CARGO_REGISTRY_TOKEN}}
+          cargo publish
 
   release:
     runs-on: ubuntu-latest
